Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138130

QTableView misrendered since qt 6.9

    XMLWordPrintable

Details

    • All
    • 7d19da385 (dev), b1843043a (6.10)

    Description

      CMakeLists.txtit seems that since qt>=6.9 the following table is misrendered (that's a minimal reproducer from a larger application):

      #include <QApplication>
      #include <QMainWindow>
      #include <QTableView>
      #include <QStandardItemModel>
      #include <QHeaderView>int main(int argc, char *argv[])
      {
        QApplication app(argc, argv);
        QMainWindow window;
        QTableView * table = new QTableView;
        QStandardItemModel * tableModel = new QStandardItemModel(8, 1);
        table->setModel(tableModel);
        for (int i = 0; i < 8; ++i)
          tableModel->setItem(i, 0, new QStandardItem("item"));
        table->horizontalHeader()->setSectionResizeMode(QHeaderView::Fixed);
        table->resizeColumnsToContents();
        window.setCentralWidget(table);
        window.resize(1024, 768);
        window.show();
        return app.exec();
      } 

      if I hover the mouse over the table items appear/disappear eventough the text should appear always:

      main.cxx

      when I move the cursor out of the window all text disappear except the first line

       

       

      here on archlinux/qt6.9.1/kde but also saw this briefly on windows, and I dont remember seeing this in 6.8.x

      possibly related: https://bugreports.qt.io/browse/QTBUG-136453 (should be fixed in 6.9.1 though)

      Attachments

        1. CMakeLists.txt
          0.2 kB
          Julien Schueller
        2. hello1.png
          23 kB
          Julien Schueller
        3. hello2.png
          24 kB
          Julien Schueller
        4. main.cxx
          0.6 kB
          Julien Schueller
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vgt Eirik Aavitsland
            jschueller Julien Schueller
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes