Fix corner case not switching to normal QHeaderivew memory model

The useGlobalMode and globalResizeMode testing was not correct.
We just want to look at the input resize parameter and
switch to normal memory mode if that can cause a section resize.

Fixes: QTBUG-138130
Pick-to: 6.9
Change-Id: If0829e54ec82b68a138a64a770df95ea85ac2e2b
Reviewed-by: Christian Ehrlicher <ch.ehrlicher@gmx.de>
(cherry picked from commit 7d19da385a030363343bd9effb38ee877523971d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>