tests/auto/widgets/itemviews/qheaderview/tst_qheaderview.cpp
@@ -213,6 +213,7 @@ private slots:
     void storeRestoreLowMemoryMode();
     void setSectionResizeModeWithSectionWillTakeMemory();
     void setModelWithAutoSizeWillSwitchToMemoryMode();
+    void tableViewResizeSectionsWillSwitchToMemoryMode();
 
     void setDefaultSectionSizeRespectsColumnWidth();
 
@@ -3559,10 +3560,15 @@ struct TableViewWithBasicModel : public QTableView
         emptyState = verticalHeader()->saveState();
         setModel(&m);
         header = verticalHeader();
+        horizontal_header = horizontalHeader();
     }
 
     bool hasLowMemoryUsage() const {
         return emptyState.size() == header->saveState().size();
+    }
+
+    bool horizontalLowMememorUsage() const {
+        return emptyState.size() == horizontal_header->saveState().size();
     }
 
     bool hasHigherMemoryUsage() const {
@@ -3572,6 +3578,7 @@ struct TableViewWithBasicModel : public QTableView
 
     BasicModel m;
     QHeaderView *header;
+    QHeaderView *horizontal_header;
     QByteArray emptyState;
 };
 
@@ -3768,6 +3775,15 @@ void tst_QHeaderView::setModelWithAutoSizeWillSwitchToMemoryMode()
     const int delta = model->columnCount() * 8;
     // even with delta help the nonEmptyState should now be bigger.
     QCOMPARE_GT(nonEmptyState.size(), emptyState.size() + delta);
+}
+
+void tst_QHeaderView::tableViewResizeSectionsWillSwitchToMemoryMode()
+{
+    TableViewWithBasicModel tv;
+    QVERIFY(tv.horizontalLowMememorUsage());
+    tv.horizontalHeader()->setSectionResizeMode(QHeaderView::Fixed);
+    tv.resizeColumnsToContents();
+    QVERIFY(!tv.horizontalLowMememorUsage());
 }
 
 void tst_QHeaderView::setDefaultSectionSizeRespectsColumnWidth()
